--- a/css/custom.css
+++ b/css/custom.css
@@ -319,7 +319,7 @@
     padding-bottom: 15px !important; /* Reduced from 50px */
   }
 
-  .copyrights .creadits {
+  .copyrights .credits {
     padding-bottom: 15px; /* Reduced from 50px */
   }
 }
