--- a/css/main.css
+++ b/css/main.css
@@ -274,14 +274,7 @@ a:hover {
   left: 2rem;
 }
 
-.sec-heading {
-  position: relative;
-  text-align: left;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 3rem;
-}
+.sec-heading {  position: relative;  text-align: left;  display: flex;  align-items: center;  justify-content: space-between;  margin-bottom: 2rem;}
 @media (max-width: 991px) {
   .sec-heading {
     flex-direction: column;
@@ -299,30 +292,13 @@ a:hover {
     justify-content: flex-start;
   }
 }
-.sec-heading .title {
-  position: relative;
-  margin-bottom: 0.75rem;
-  font-size: 3rem;
-  font-weight: 500;
-  text-transform: capitalize;
-  letter-spacing: 1.5px;
-  line-height: 1.3;
-  display: inline-block;
-  z-index: 0;
-}
+.sec-heading .title {  position: relative;  margin-bottom: 1rem;  font-size: 3rem;  font-weight: 500;  text-transform: capitalize;  letter-spacing: 1.5px;  line-height: 1.3;  display: inline-block;  z-index: 0;}
 @media (max-width: 767px) {
   .sec-heading .title {
     font-size: 2.5rem;
   }
 }
-.sec-heading .subtitle {
-  margin: 0 auto;
-  margin-bottom: 1.25rem;
-  font-size: 1.1rem;
-  font-weight: 400;
-  text-transform: capitalize;
-  opacity: 0.75;
-}
+.sec-heading .subtitle {  margin: 0 auto;  margin-bottom: 1.5rem;  font-size: 1.1rem;  font-weight: 400;  text-transform: capitalize;  opacity: 0.75;}
 @media (max-width: 767px) {
   .sec-heading .subtitle {
     width: 100%;
@@ -5444,3 +5420,160 @@ body.dark-theme .about .stats-counter.stats-cards .stat-box {
 }
 
 /*    End dark theme rules  *//*# sourceMappingURL=main-LTR.css.map */
+
+/*    Start Industries Section  */
+.industries .industry-box {
+  box-shadow: 0px 3px 20px 0px rgba(var(--clr-dark-blue-rgb), 0.1);
+}
+
+.industries .posts-grid .industry-box {
+  margin-bottom: 2rem;
+  overflow: hidden;
+  border-radius: 0.25rem;
+  position: relative;
+  transition: all 0.3s ease 0s;
+}
+
+.industries .posts-grid .industry-box:hover .industry-img-wrapper .overlay-color {
+  opacity: 0.5;
+}
+
+.industries .posts-grid .industry-box:hover .industry-img-wrapper .industry-img {
+  transform: scale(1.1);
+}
+
+.industries .posts-grid .industry-box:hover .industry-img-wrapper .icon {
+  color: var(--clr-main);
+}
+
+.industries .posts-grid .industry-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.industries .posts-grid .industry-img-wrapper {  width: 100%;  height: 280px;  overflow: hidden;  position: relative;  z-index: 1;}
+
+.industries .posts-grid .industry-img-wrapper .overlay-color {
+  background-color: var(--clr-dark-blue);
+  opacity: 0.25;
+  transition: all 0.3s ease 0s;
+  z-index: 2;
+}
+
+.industries .posts-grid .industry-img-wrapper .industry-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.5s ease-in-out 0s;
+  transform: scale(1);
+}
+
+.industries .posts-grid .industry-img-wrapper .industry-date {
+  background-color: var(--clr-main);
+  color: var(--clr-white);
+  border-radius: 2px;
+  z-index: 4;
+  position: absolute;
+  padding: 0.25rem 0.5rem;
+  right: 1rem;
+  top: 1rem;
+  font-size: 0.75rem;
+  text-transform: capitalize;
+}
+
+.industries .posts-grid .industry-summary {  padding: 1rem;  background-color: rgba(var(--clr-main-rgb), 0.05);  position: relative;  z-index: 3;}
+
+.industries .posts-grid .industry-summary .industry-title {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+  word-break: break-word;
+  transition: color 0.3s ease 0s;
+  line-height: 1.5;
+}
+
+.industries .posts-grid .industry-summary .industry-title:hover {
+  color: var(--clr-main);
+}
+
+.industries .posts-grid .industry-summary .industry-excerpt {
+  margin-bottom: 0rem;
+}
+
+.industries .posts-grid.horizontal .industry-box {
+  display: flex;
+}
+
+.industries .posts-grid.horizontal .industry-link {
+  display: flex;
+}
+
+.industries .posts-grid.horizontal .industry-img-wrapper {  width: 40%;  height: 280px;}
+
+@media (max-width: 767px) {
+  .industries .posts-grid.horizontal .industry-box {
+    flex-direction: column;
+  }
+  .industries .posts-grid.horizontal .industry-summary {
+    padding: 1.5rem 1rem;
+  }
+}
+
+.industries.industries-home {  padding-top: 6rem;  padding-bottom: 2rem;}
+
+.industries .industries-grid {  margin-top: 2rem;  margin-bottom: 2rem;}
+
+.industries .industries-grid .industry-box {  margin-bottom: 2.5rem;  overflow: hidden;  border-radius: 0.25rem;  position: relative;  transition: all 0.3s ease 0s;}
+
+.industries .industries-grid .industry-box:hover .industry-img-wrapper .overlay-color {
+  opacity: 0.5;
+}
+
+.industries .industries-grid .industry-box:hover .industry-img-wrapper .industry-img {
+  transform: scale(1.1);
+}
+
+.industries .industries-grid .industry-box:hover .industry-img-wrapper .icon {
+  color: var(--clr-main);
+}
+
+.industries .industries-grid .industry-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.industries .industries-grid .industry-img-wrapper {  width: 100%;  height: 280px;  overflow: hidden;  position: relative;  z-index: 1;}
+
+.industries .industries-grid .industry-img-wrapper .overlay-color {
+  background-color: var(--clr-dark-blue);
+  opacity: 0.25;
+  transition: all 0.3s ease 0s;
+  z-index: 2;
+}
+
+.industries .industries-grid .industry-img-wrapper .industry-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.5s ease-in-out 0s;
+  transform: scale(1);
+}
+
+.industries .industries-grid .industry-summary {  padding: 1rem;  background-color: rgba(var(--clr-main-rgb), 0.05);  position: relative;  z-index: 3;}
+
+.industries .industries-grid .industry-summary .industry-title {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+  word-break: break-word;
+  transition: color 0.3s ease 0s;
+  line-height: 1.5;
+}
+
+.industries .industries-grid .industry-summary .industry-title:hover {
+  color: var(--clr-main);
+}
+
+.industries .industries-grid .industry-summary .industry-excerpt {
+  margin-bottom: 0rem;
+}
